<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginBottom="400dp"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassWord"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginBottom="300dp"
        android:hint="@string/pass_word"
        android:maxLines="1"
        android:gravity="left|center"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editUserName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editPassWord"
        android:text="@string/button_login"
        android:textSize="30dp"
        android:background="@drawable/custom_button_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>